--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@CropWatch"
+    "registry": "https://npm.pkg.github.com/@CropWatchDevelopment/CropWatch-DashboardCardDataRow"
   }
 }
