--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CropWatch-DashboardCardDataRow",
+  "name": "datarow",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@CropWatchDevelopment/CropWatch-DashboardCardDataRow"
+    "registry": "https://npm.pkg.github.com/@cropwatch"
   }
 }
